fixed issue #9: text in fields and values got wrapped in Chrome when zooming your browser

--- a/jsoneditor/jsoneditor.css
+++ b/jsoneditor/jsoneditor.css
@@ -7,6 +7,7 @@
     margin: 1px;
     outline: none;
     word-wrap: break-word;
+    float: left;
 }
 
 /* adjust margin of p elements inside editable divs, needed for Opera, IE */
